force-app/main/default/objects/Pricing_Request__c/Pricing_Request__c.object-meta.xml
<CustomObject>
    <description>Used for getting the pricing requests in SFDC and keeping track of the pricing information received from API</description>
    <label>Pricing Request</label>
    <nameField>
        <displayFormat>PR{YY}{MM}{DD}{0}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>