force-app/main/default/objects/Pricing_Request__c/fields/Acorn_Issue_Id__c.field-meta.xml
<CustomField>
    <fullName>Acorn_Issue_Id__c</fullName>
    <label>Acorn Issue Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>