force-app/main/default/objects/Pricing_Request__c/fields/API_Error__c.field-meta.xml
<CustomField>
    <fullName>API_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added just for POC purpose, will be removed once the API integration is done</description>
    <label>API Error</label>
    <type>Checkbox</type>
</CustomField>