force-app/main/default/objects/Pricing_Request__c/fields/APIRequestOutput__c.field-meta.xml
<CustomField>
    <fullName>APIRequestOutput__c</fullName>
    <label>APIRequestOutput</label>
    <length>82768</length>
    <type>LongTextArea</type>
</CustomField>