force-app/main/default/objects/Pricing_Request__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Case does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Case.RecordTypeId</field>
            <operation>equals</operation>
            <value>New Service Case, Modify Existing Service Case</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Pricing Requests</relationshipLabel>
    <relationshipName>Pricing_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>