force-app/main/default/objects/Pricing_Request__c/fields/Case_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Case_Error_Message__c</fullName>
    <label>Case Error Message</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>