force-app/main/default/objects/Pricing_Request__c/fields/Container_Size__c.field-meta.xml
<CustomField>
    <fullName>Container_Size__c</fullName>
    <label>Container Size</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Container_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>GALS-30</fullName>
                <label>30 Gallons</label>
            </value>
            <value>
                <fullName>GALS-32</fullName>
                <label>32 Gallons</label>
            </value>
            <value>
                <fullName>GALS-34</fullName>
                <label>34 Gallons</label>
            </value>
            <value>
                <fullName>GALS-35</fullName>
                <label>35 Gallons</label>
            </value>
            <value>
                <fullName>GALS-45</fullName>
                <label>45 Gallons</label>
            </value>
            <value>
                <fullName>GALS-55</fullName>
                <label>55 Gallons</label>
            </value>
            <value>
                <fullName>GALS-60</fullName>
                <label>60 Gallons</label>
            </value>
            <value>
                <fullName>GALS-64</fullName>
                <label>64 Gallons</label>
            </value>
            <value>
                <fullName>GALS-65</fullName>
                <label>65 Gallons</label>
            </value>
            <value>
                <fullName>GALS-90</fullName>
                <label>90 Gallons</label>
            </value>
            <value>
                <fullName>GALS-95</fullName>
                <label>95 Gallons</label>
            </value>
            <value>
                <fullName>GALS-96</fullName>
                <label>96 Gallons</label>
            </value>
            <value>
                <fullName>YRDS-1</fullName>
                <label>1 Yards</label>
            </value>
            <value>
                <fullName>YRDS-1.5</fullName>
                <label>1.5 Yards</label>
            </value>
            <value>
                <fullName>YRDS-2</fullName>
                <label>2 Yards</label>
            </value>
            <value>
                <fullName>YRDS-3</fullName>
                <label>3 Yards</label>
            </value>
            <value>
                <fullName>YRDS-4</fullName>
                <label>4 Yards</label>
            </value>
            <value>
                <fullName>YRDS-6</fullName>
                <label>6 Yards</label>
            </value>
            <value>
                <fullName>YRDS-8</fullName>
                <label>8 Yards</label>
            </value>
            <value>
                <fullName>YRDS-10</fullName>
                <label>10 Yards</label>
            </value>
            <value>
                <fullName>YRDS-12</fullName>
                <label>12 Yards</label>
            </value>
            <value>
                <fullName>YRDS-14</fullName>
                <label>14 Yards</label>
            </value>
            <value>
                <fullName>YRDS-15</fullName>
                <label>15 Yards</label>
            </value>
            <value>
                <fullName>YRDS-16</fullName>
                <label>16 Yards</label>
            </value>
            <value>
                <fullName>YRDS-17</fullName>
                <label>17 Yards</label>
            </value>
            <value>
                <fullName>YRDS-18</fullName>
                <label>18 Yards</label>
            </value>
            <value>
                <fullName>YRDS-20</fullName>
                <label>20 Yards</label>
            </value>
            <value>
                <fullName>YRDS-24</fullName>
                <label>24 Yards</label>
            </value>
            <value>
                <fullName>YRDS-25</fullName>
                <label>25 Yards</label>
            </value>
            <value>
                <fullName>YRDS-26</fullName>
                <label>26 Yards</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>