force-app/main/default/objects/Pricing_Request__c/fields/Container_Type__c.field-meta.xml
<CustomField>
    <fullName>Container_Type__c</fullName>
    <label>Container Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Line_of_Business__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>OT</fullName>
                <label>Open Top</label>
            </value>
            <value>
                <fullName>CMP</fullName>
                <label>Compactor</label>
            </value>
            <value>
                <fullName>CMPSC</fullName>
                <label>Compactor - Self-Contained</label>
            </value>
            <value>
                <fullName>CMB</fullName>
                <label>Compactor Box Only</label>
            </value>
            <value>
                <fullName>DMP</fullName>
                <label>Dumpster</label>
            </value>
            <value>
                <fullName>VTC</fullName>
                <label>Vertical Compactor</label>
            </value>
            <value>
                <fullName>No Mapping</fullName>
            </value>
            <value>
                <fullName>TOT</fullName>
                <label>Toter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>