force-app/main/default/objects/Pricing_Request__c/fields/Cost_Source__c.field-meta.xml
<CustomField>
    <fullName>Cost_Source__c</fullName>
    <label>Cost Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>