force-app/main/default/objects/Pricing_Request__c/fields/Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code__c</fullName>
    <description>Need to discuss to use Account Lookup</description>
    <label>Customer Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>