force-app/main/default/objects/Pricing_Request__c/fields/Customer_Owned__c.field-meta.xml
<CustomField>
    <fullName>Customer_Owned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Owned (Check If Yes)</label>
    <type>Checkbox</type>
</CustomField>