force-app/main/default/objects/Pricing_Request__c/fields/Customer_Price_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Price_Type__c</fullName>
    <description>Adding this field for story 20401. Purpose of this field to store the API response value and this will be display to all users who having Pricing permission.</description>
    <label>Customer Price Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>