force-app/main/default/objects/Pricing_Request__c/fields/Disposal_Cost__c.field-meta.xml
<CustomField>
    <fullName>Disposal_Cost__c</fullName>
    <label>Disposal Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>