force-app/main/default/objects/Pricing_Request__c/fields/Disposal_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Disposal_Rate_Type__c</fullName>
    <label>Disposal Rate Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>