force-app/main/default/objects/Pricing_Request__c/fields/Est_Tons_per_Haul__c.field-meta.xml
<CustomField>
    <fullName>Est_Tons_per_Haul__c</fullName>
    <label>Est Tons per Haul</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>