force-app/main/default/objects/Pricing_Request__c/fields/Extra_Pickup_Cost__c.field-meta.xml
<CustomField>
    <fullName>Extra_Pickup_Cost__c</fullName>
    <label>Extra Pickup Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>