force-app/main/default/objects/Pricing_Request__c/fields/Facility_Id__c.field-meta.xml
<CustomField>
    <fullName>Facility_Id__c</fullName>
    <label>Facility Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>