force-app/main/default/objects/Pricing_Request__c/fields/Frequency_Count__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Count__c</fullName>
    <description>Commercial Pricing Request Field</description>
    <label>Frequency Count</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Frequency_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0.5</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>No Mapping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>