force-app/main/default/objects/Pricing_Request__c/fields/Frequency_Type__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Type__c</fullName>
    <description>Commercial Pricing Request Field</description>
    <label>Frequency Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Line_of_Business__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>EOW</fullName>
            </value>
            <value>
                <fullName>No Mapping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>