force-app/main/default/objects/Pricing_Request__c/fields/Haul_Cost__c.field-meta.xml
<CustomField>
    <fullName>Haul_Cost__c</fullName>
    <label>Haul Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>