force-app/main/default/objects/Pricing_Request__c/fields/Haul_Price__c.field-meta.xml
<CustomField>
    <fullName>Haul_Price__c</fullName>
    <label>Haul Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>