force-app/main/default/objects/Pricing_Request__c/fields/Haul_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Haul_Rate_Type__c</fullName>
    <label>Haul Rate Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>