force-app/main/default/objects/Pricing_Request__c/fields/Haul_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Haul_Record_Id__c</fullName>
    <description>Adding this field for story 20401. Purpose of this field to store the API response value and this will be display to all users who having Pricing permission.</description>
    <label>Haul Record Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>