force-app/main/default/objects/Pricing_Request__c/fields/Hauls_Month__c.field-meta.xml
<CustomField>
    <fullName>Hauls_Month__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Hauls/Month</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>