force-app/main/default/objects/Pricing_Request__c/fields/Industry_Classification__c.field-meta.xml
<CustomField>
    <fullName>Industry_Classification__c</fullName>
    <label>Industry Classification</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>72</fullName>
                <label>Accommodation and Food Services</label>
            </value>
            <value>
                <fullName>56</fullName>
                <label>Admin and Support and Waste Management and Remediation Services</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Agriculture, Forestry, Fishing and Hunting</label>
            </value>
            <value>
                <fullName>71</fullName>
                <label>Arts, Entertainment, and Recreation</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>Construction</label>
            </value>
            <value>
                <fullName>61</fullName>
                <label>Educational Services</label>
            </value>
            <value>
                <fullName>52</fullName>
                <label>Finance and Insurance</label>
            </value>
            <value>
                <fullName>62</fullName>
                <label>Healthcare and Social Assistance</label>
            </value>
            <value>
                <fullName>51</fullName>
                <label>Information</label>
            </value>
            <value>
                <fullName>55</fullName>
                <label>Management of Company and Enterprises</label>
            </value>
            <value>
                <fullName>313233</fullName>
                <label>Manufacturing</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Mining, Quarrying, and Oil and Gas Extraction</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>81</fullName>
                <label>Other Services (except Public Administration)</label>
            </value>
            <value>
                <fullName>54</fullName>
                <label>Professional, Scientific, and Technical Services</label>
            </value>
            <value>
                <fullName>92</fullName>
                <label>Public Administration</label>
            </value>
            <value>
                <fullName>53</fullName>
                <label>Real Estate and Rental and Leasing</label>
            </value>
            <value>
                <fullName>4445</fullName>
                <label>Retail Trade</label>
            </value>
            <value>
                <fullName>4849</fullName>
                <label>Transportation and Warehousing</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Utilities</label>
            </value>
            <value>
                <fullName>42</fullName>
                <label>Wholesale Trade</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>