force-app/main/default/objects/Pricing_Request__c/fields/Is_Multi_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Is_Multi_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to identify new pricing records that were created after SDT-20689 which are created either from pricing tool or through standard pricing in asset management.</description>
    <label>Is Multi Vendor</label>
    <type>Checkbox</type>
</CustomField>