force-app/main/default/objects/Pricing_Request__c/fields/isAPIResult__c.field-meta.xml
<CustomField>
    <fullName>isAPIResult__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check the API response</description>
    <label>isAPIResult</label>
    <type>Checkbox</type>
</CustomField>