force-app/main/default/objects/Pricing_Request__c/fields/IsCaseError__c.field-meta.xml
<CustomField>
    <fullName>IsCaseError__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCaseError</label>
    <type>Checkbox</type>
</CustomField>