force-app/main/default/objects/Pricing_Request__c/fields/IsPriceChangeRequest__c.field-meta.xml
<CustomField>
    <fullName>IsPriceChangeRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This filed is use to identify between New and Change price request.</description>
    <label>IsPriceChangeRequest</label>
    <type>Checkbox</type>
</CustomField>