force-app/main/default/objects/Pricing_Request__c/fields/Market_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Market_Area_Code__c</fullName>
    <label>Market Area Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>