force-app/main/default/objects/Pricing_Request__c/fields/Market_Area_Name__c.field-meta.xml
<CustomField>
    <fullName>Market_Area_Name__c</fullName>
    <label>Market Area Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>