force-app/main/default/objects/Pricing_Request__c/fields/Material_Code__c.field-meta.xml
<CustomField>
    <fullName>Material_Code__c</fullName>
    <label>Material Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Line_of_Business__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>T</fullName>
                <label>Trash</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Cardboard</label>
            </value>
            <value>
                <fullName>C&amp;D</fullName>
                <label>Construction / Demolition</label>
            </value>
            <value>
                <fullName>SSR</fullName>
                <label>Single Stream Recycling</label>
            </value>
            <value>
                <fullName>ORGANIC</fullName>
                <label>Organic Waste</label>
            </value>
            <value>
                <fullName>ME</fullName>
                <label>Metal</label>
            </value>
            <value>
                <fullName>CU</fullName>
                <label>Copper</label>
            </value>
            <value>
                <fullName>FDW</fullName>
                <label>Food Waste</label>
            </value>
            <value>
                <fullName>CNCR</fullName>
                <label>Concrete</label>
            </value>
            <value>
                <fullName>WD</fullName>
                <label>Wood</label>
            </value>
            <value>
                <fullName>BM</fullName>
                <label>Bulk Material</label>
            </value>
            <value>
                <fullName>No Mapping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>