force-app/main/default/objects/Pricing_Request__c/fields/Number_of_Service_Intervals__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Service_Intervals__c</fullName>
    <label>Number of Service Intervals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>