force-app/main/default/objects/Pricing_Request__c/fields/Original_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Original_Case_Number__c</fullName>
    <label>Original Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>