force-app/main/default/objects/Pricing_Request__c/fields/Parent_Pricing_Request__c.field-meta.xml
<CustomField>
    <fullName>Parent_Pricing_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Pricing Request</label>
    <referenceTo>Pricing_Request__c</referenceTo>
    <relationshipLabel>Pricing Request</relationshipLabel>
    <relationshipName>Pricing_Request</relationshipName>
    <type>Lookup</type>
</CustomField>