force-app/main/default/objects/Pricing_Request__c/fields/Pickup_Price__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Price__c</fullName>
    <label>Pickup Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>