force-app/main/default/objects/Pricing_Request__c/fields/Pickup_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Rate_Type__c</fullName>
    <label>Pickup Rate Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>