force-app/main/default/objects/Pricing_Request__c/fields/PriceCaseComment__c.field-meta.xml
<CustomField>
    <fullName>PriceCaseComment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PriceCaseComment</label>
    <type>Checkbox</type>
</CustomField>