force-app/main/default/objects/Pricing_Request__c/fields/Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Type__c</fullName>
    <description>Use to identified pricing type.</description>
    <label>Pricing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PT</fullName>
                <label>Pricing Tool</label>
            </value>
            <value>
                <fullName>AM</fullName>
                <label>Standard</label>
            </value>
            <value>
                <fullName>AMPO</fullName>
                <label>Price Only</label>
            </value>
            <value>
                <fullName>PTCO</fullName>
                <label>Pricing Tool Cost Only</label>
            </value>
            <value>
                <fullName>AMCO</fullName>
                <label>Asset Management Cost Only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>