force-app/main/default/objects/Pricing_Request__c/fields/Project_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Adding this field for story 20401. Purpose of this field to store the API response value and this will be display to all users who having Pricing permission.</description>
    <label>Project</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only active projects may be associated to quotes</errorMessage>
        <filterItems>
            <field>Project_Code__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_Code__c</referenceTo>
    <relationshipLabel>Pricing Request</relationshipLabel>
    <relationshipName>Pricing_Request</relationshipName>
    <type>Lookup</type>
</CustomField>