force-app/main/default/objects/Pricing_Request__c/fields/Project_Request__c.field-meta.xml
<CustomField>
    <fullName>Project_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Adding this field for story 20401. Purpose of this field to store the API response value and this will be display to all users who having Pricing permission.</description>
    <label>Project Request (Check If Yes)</label>
    <type>Checkbox</type>
</CustomField>