force-app/main/default/objects/Pricing_Request__c/fields/Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line__c</fullName>
    <label>Quote Line</label>
    <length>20</length>
    <type>Text</type>
</CustomField>