force-app/main/default/objects/Pricing_Request__c/fields/Quote_Line_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Bundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Bundle</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Pricing Request</relationshipLabel>
    <relationshipName>Pricing_Request</relationshipName>
    <type>Lookup</type>
</CustomField>