force-app/main/default/objects/Pricing_Request__c/fields/QuoteID__c.field-meta.xml
<CustomField>
    <fullName>QuoteID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This will act as Unique Identifier from API.</description>
    <externalId>true</externalId>
    <label>QuoteID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>