force-app/main/default/objects/Pricing_Request__c/fields/Schedule_or_On_Call__c.field-meta.xml
<CustomField>
    <fullName>Schedule_or_On_Call__c</fullName>
    <label>Schedule or On-Call</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Line_of_Business__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>On-Call</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>No Mapping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>