force-app/main/default/objects/Pricing_Request__c/fields/Service_Baseline_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Baseline_ID__c</fullName>
    <label>Service Baseline ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>