force-app/main/default/objects/Pricing_Request__c/fields/Service_Country__c.field-meta.xml
<CustomField>
    <fullName>Service_Country__c</fullName>
    <label>Service Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>