force-app/main/default/objects/Pricing_Request__c/fields/Service_Interval__c.field-meta.xml
<CustomField>
    <fullName>Service_Interval__c</fullName>
    <label>Service Interval</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Line_of_Business__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>On-Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>