force-app/main/default/objects/Pricing_Request__c/fields/Service_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Postal_Code__c</fullName>
    <label>Service Postal Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>