force-app/main/default/objects/Pricing_Request__c/fields/Service_State__c.field-meta.xml
<CustomField>
    <fullName>Service_State__c</fullName>
    <label>Service State</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>