force-app/main/default/objects/Pricing_Request__c/fields/Service_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Service_Street_Address__c</fullName>
    <label>Service Street Address</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>