force-app/main/default/objects/Pricing_Request__c/fields/Site_Id__c.field-meta.xml
<CustomField>
    <fullName>Site_Id__c</fullName>
    <description>Field created for Story 29645</description>
    <label>Site Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>